# courrier

./: .gitignore  Cargo.toml  Config.toml.example  Dockerfile  LICENSE  README.md  config.toml.example  docker-compose.example.yml  flake.nix
.github/workflows/: ci.yml  docker.yml
assets/: dashboard.html
src/: config.rs  database.rs  fetcher.rs  main.rs  server.rs
