[package]
name = "mailster"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
imap = "2.4.1"
native-tls = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
tower-http = { version = "0.5", features = ["fs"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
